<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/cart"
            android:icon="@drawable/nav_cart"
            android:title="@string/cart" />

        <item
            android:id="@+id/orders"
            android:icon="@drawable/orders"
            android:title="@string/orders" />

        <item
            android:id="@+id/categories"
            android:icon="@drawable/category"
            android:title="@string/categories"
            />

        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout"
            android:title="@string/logout"
            />



    </group>


</menu>