<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_cart"
            android:iconTint="@android:color/white"
            android:title="@string/cart"
            tools:targetApi="o" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/orders"
            android:iconTint="@android:color/white"
            android:title="@string/orders"
            tools:targetApi="o" />
        <item
            android:id="@+id/category"
            android:icon="@drawable/category"
            android:iconTint="@android:color/white"
            android:title="@string/category"
            tools:targetApi="o" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_menu_manage"
            android:iconTint="@android:color/white"
            android:title="@string/settings"
            tools:targetApi="o" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout"
            android:iconTint="@android:color/white"
            android:title="@string/logout"
            tools:targetApi="o" />
    </group>
</menu>