<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OxfordActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="28dp"
        android:layout_height="11dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="303dp"
        android:contentDescription="@string/Back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.253"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image3" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="20dp"
        android:layout_height="21dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/Search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.585"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image4" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="20dp"
        android:layout_height="21dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/Notification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.165"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image5" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="48dp"
        android:layout_height="22dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/Camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image6" />


    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="20dp"
        android:layout_height="21dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/Upload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toEndOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image14" />

    <TextView
        android:id="@+id/textView48"
        android:layout_width="156dp"
        android:layout_height="40dp"
        android:layout_marginTop="44dp"
        android:text="@string/Oxford"
        android:textColor="#3A3A3A"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView86"
        android:layout_width="179dp"
        android:layout_height="197dp"
        android:contentDescription="@string/img1"
        app:layout_constraintStart_toStartOf="@+id/textView48"
        app:layout_constraintTop_toBottomOf="@+id/textView48"
        app:srcCompat="@drawable/image86" />

    <ImageView
        android:id="@+id/imageView87"
        android:layout_width="179dp"
        android:layout_height="197dp"
        android:contentDescription="@string/img2"
        app:layout_constraintStart_toEndOf="@+id/imageView86"
        app:layout_constraintTop_toBottomOf="@+id/textView48"
        app:srcCompat="@drawable/image87" />

    <ImageView
        android:id="@+id/imageView88"
        android:layout_width="179dp"
        android:layout_height="197dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/img4"
        app:layout_constraintEnd_toEndOf="@+id/imageView87"
        app:layout_constraintStart_toEndOf="@+id/imageView89"
        app:layout_constraintTop_toBottomOf="@+id/imageView87"
        app:srcCompat="@drawable/image88" />

    <ImageView
        android:id="@+id/imageView89"
        android:layout_width="179dp"
        android:layout_height="197dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/img3"
        app:layout_constraintStart_toStartOf="@+id/imageView86"
        app:layout_constraintTop_toBottomOf="@+id/imageView86"
        app:srcCompat="@drawable/image89" />

    <ImageView
        android:id="@+id/imageView90"
        android:layout_width="179dp"
        android:layout_height="197dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/img6"
        app:layout_constraintEnd_toEndOf="@+id/imageView88"
        app:layout_constraintStart_toEndOf="@+id/imageView91"
        app:layout_constraintTop_toBottomOf="@+id/imageView88"
        app:srcCompat="@drawable/image90" />

    <ImageView
        android:id="@+id/imageView91"
        android:layout_width="179dp"
        android:layout_height="197dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/img5"
        app:layout_constraintStart_toStartOf="@+id/imageView89"
        app:layout_constraintTop_toBottomOf="@+id/imageView89"
        app:srcCompat="@drawable/image91" />


</androidx.constraintlayout.widget.ConstraintLayout>