<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SandalsActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="28dp"
        android:layout_height="11dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="303dp"
        android:contentDescription="@string/Back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.253"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image3" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="20dp"
        android:layout_height="21dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/Search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.585"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image4" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="20dp"
        android:layout_height="21dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/Notification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.165"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image5" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="48dp"
        android:layout_height="22dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/Camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image6" />


    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="20dp"
        android:layout_height="21dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/Upload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toEndOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image14" />

    <TextView
        android:id="@+id/textView48"
        android:layout_width="156dp"
        android:layout_height="40dp"
        android:layout_marginTop="44dp"
        android:text="@string/sandals"
        android:textColor="#3A3A3A"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView92"
        android:layout_width="179dp"
        android:layout_height="197dp"
        android:contentDescription="@string/img1"
        app:layout_constraintStart_toStartOf="@+id/textView48"
        app:layout_constraintTop_toBottomOf="@+id/textView48"
        app:srcCompat="@drawable/image92" />

    <ImageView
        android:id="@+id/imageView93"
        android:layout_width="179dp"
        android:layout_height="197dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/img2"
        app:layout_constraintStart_toEndOf="@+id/imageView92"
        app:layout_constraintTop_toBottomOf="@+id/textView48"
        app:srcCompat="@drawable/image93" />

    <ImageView
        android:id="@+id/imageView94"
        android:layout_width="179dp"
        android:layout_height="197dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/img4"
        app:layout_constraintEnd_toEndOf="@+id/imageView93"
        app:layout_constraintStart_toEndOf="@+id/imageView95"
        app:layout_constraintTop_toBottomOf="@+id/imageView93"
        app:srcCompat="@drawable/image94" />

    <ImageView
        android:id="@+id/imageView95"
        android:layout_width="179dp"
        android:layout_height="197dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/imgg2"
        app:layout_constraintStart_toStartOf="@+id/imageView92"
        app:layout_constraintTop_toBottomOf="@+id/imageView92"
        app:srcCompat="@drawable/image95" />

    <ImageView
        android:id="@+id/imageView96"
        android:layout_width="179dp"
        android:layout_height="197dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/img6"
        app:layout_constraintEnd_toEndOf="@+id/imageView94"
        app:layout_constraintStart_toEndOf="@+id/imageView97"
        app:layout_constraintTop_toBottomOf="@+id/imageView94"
        app:srcCompat="@drawable/image96" />

    <ImageView
        android:id="@+id/imageView97"
        android:layout_width="179dp"
        android:layout_height="197dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/img5"
        app:layout_constraintStart_toStartOf="@+id/imageView95"
        app:layout_constraintTop_toBottomOf="@+id/imageView95"
        app:srcCompat="@drawable/image97" />
</androidx.constraintlayout.widget.ConstraintLayout>